--- a/web/WEB-INF/templates/default/resources/styles/css/bootstrap.css
+++ b/web/WEB-INF/templates/default/resources/styles/css/bootstrap.css
@@ -1588,6 +1588,7 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
+/*2015-11-11 ÐûÑïÐÞ¸Ä*/
 @media (min-width: 768px) {
   .container {
     width: 750px;
