--- a/web/WEB-INF/templates/default/decorators/include/headerMarket.jspf
+++ b/web/WEB-INF/templates/default/decorators/include/headerMarket.jspf
@@ -311,7 +311,7 @@
 					<div class="col-md-4 col-lg-3" style="padding-bottom: 50px;">
 						<ul class="w-menu-right list-unstyled">
 							<li>
-								<a href="javascript:void(0)" class="w-gwc">购物车(<span id="cartNum">
+								<a href="javascript:void(0)" class="w-gwc">购物车(<span class="cartNumPhone">
 										${shoppingcart.buyNowItemsCount == null || shoppingcart.buyNowItemsCount == "" ? 0 : shoppingcart.buyNowItemsCount}</span>) </a>
 							</li>
 							<li id="loginPromptHolderTemplateLogout">
@@ -338,7 +338,7 @@
 					<div class="col-xs-4 col-sm-3 text-right w-gwct"
 						style="padding-bottom: 50px;">
 						<a href="javascript:void(0)"><span class="w-gwc">购物车
-								(0)</span> </a>
+								(<span class="cartNumPhone">${shoppingcart.buyNowItemsCount == null || shoppingcart.buyNowItemsCount == "" ? 0 : shoppingcart.buyNowItemsCount}</span>)</span> </a>
 					</div>
 
 				</div>
