--- a/web/WEB-INF/templates/default/decorators/include/headerNew.jspf
+++ b/web/WEB-INF/templates/default/decorators/include/headerNew.jspf
@@ -330,7 +330,7 @@
 					<div class="col-xs-4 col-sm-3 text-right w-gwct"
 						style="padding-bottom: 50px;">
 						<a href="javascript:void(0)"><span class="w-gwc">购物车
-								(0)</span> </a>
+								(<span id="cartNumPhone">${shoppingcart.buyNowItemsCount == null || shoppingcart.buyNowItemsCount == "" ? 0 : shoppingcart.buyNowItemsCount}</span>)</span> </a>
 					</div>
 
 				</div>
