--- a/web/WEB-INF/templates/default/resources/styles/css/car-list.css
+++ b/web/WEB-INF/templates/default/resources/styles/css/car-list.css
@@ -8,6 +8,7 @@ ul,li{ list-style:none;}
 .w-car-box .row{ margin:0;}
 .w-car-box-tit{ text-align:center; padding:45px 0; font-size:30px;}
 .w-car-box-list-tit{ border-top:solid 1px #757575;  border-bottom:solid 1px #757575; padding:10px 0; font-size:12px; color:#000; font-weight:bold;}
+/*产品信息*/
 .w-car-box-list-box { margin-top:40px;}
 .w-car-box-list-box table th{ padding:10px 0; border-bottom:solid 1px #e3e3e3; font-weight:normal; color:#757575; white-space:nowrap; padding-right:10px;}
 .w-car-box-list-box table th a{ color:#fbbd6a;}
@@ -27,7 +28,7 @@ ul,li{ list-style:none;}
 .w-car-box-list-box dl dd.w-car-last div.m-car-price{ width:57%;}
 .w-car-box-list-box dl dd.w-car-last div.m-car-price span{ display:inline-block; width:50%; vertical-align:middle;}
 .w-car-box-list-box dl dd.w-car-last div.m-car-price span font{ font-size:14px;}
-
+/*产品结算*/
 .w-car-bottom{ padding:40px 0; border-top:solid 1px #757575;}
 .w-car-bottom-info{ color:#999; line-height:22px; font-size:12px; float:left;}
 .w-car-bottom-info p{ margin:0;}
@@ -43,7 +44,7 @@ ul,li{ list-style:none;}
 .w-car-bottom-btn p a{ font-size:20px; color:#FFF; background:#fbbd6a; display:block; text-align:center; line-height:50px; border:solid 2px #fbbd6a;}
 .w-car-bottom-btn p a:hover{ background:none; color:#fbbd6a;}
 
-
+/*自适应*/
 @media (max-width: 992px){
 	.w-car-box-tit{ padding:20px 0 0 0;}
 	.w-car-box-list-tit{ display:none;}
@@ -60,7 +61,7 @@ ul,li{ list-style:none;}
 	.w-car-box-list-box{ border-top:solid 1px #e2e2e2;}
 }
 
-@media (max-width: 768px){
+@media (max-width: 900px){
 	.w-car-box-list-box dl dd.w-car-last div.Spinner input{ width:30px;}
 	.w-car-bottom-btn p a{ line-height:45px;}
 }
