--- a/web/WEB-INF/templates/default/resources/styles/css/shooping-list.css
+++ b/web/WEB-INF/templates/default/resources/styles/css/shooping-list.css
@@ -3,8 +3,9 @@ body{height:auto;}
 a{ color:#333;}
 
 .w-shooping-list{ margin-top:80px; height:auto;}
-.w-shooping-list-sort{left:0; width:290px; z-index:15; height:100%; background:#f1f1f1; position:relative;}
-.w-shooping-list-sort ul{ float:left; width:230px; margin:0;}
+/*2015-10-28 ÐûÑïÐÞ¸Ä*/
+.w-shooping-list-sort{left:0; width:290px; z-index:15; height:100%; background:#f1f1f1;float:left;}
+.w-shooping-list-sort ul{ float:left; width:230px; margin:0;padding-bottom:30px;}
 .w-shooping-list-sort ul li{ padding-left:40px; margin-top:10px;}
 .w-shooping-list-sort ul li .sort-tit i{ margin-left:10px;}
 .w-shooping-list-sort ul li p{ margin:0; line-height:26px;}
@@ -12,10 +13,12 @@ a{ color:#333;}
 .w-shooping-list-sort ul li p i{ margin-right:5px;}
 .w-shooping-list-sort ul li p i.fa-mars{ font-size:12px;}
 .sort-btn{ float:left; width:60px; text-align:center; padding-top:50px; position:relative; height:100%;}
-.sort-btn:hover{ cursor:pointer;}
+.sort-btn:hover{ cursor:pointer;background:#dcdcdc;}
 .sort-btn i{ font-size:22px;}
-.sort-btn.active p{ display:none;}
-.w-shooping-list-box{height:auto;}
+.sort-btn.active p{ display:block;}
+
+.w-shooping-list-box{height:auto;min-height:1000px;}
+
 .w-shooping-list-box .product_box{
 	width:98%;
 	margin: 0 2% 0 0;
@@ -32,7 +35,14 @@ a{ color:#333;}
 .w-shooping-list-box .w-page a.next{ padding-left:20px;}
 
 .w-designer-deta{ margin-bottom:30px; text-align:center;}
-.designer-deta-img{ padding:0 2%;}
+.designer-deta-img{ padding:0 2%; max-height:300px;}
+.img_des_bg{
+	background-position: center center;
+	background-size: cover;
+	position:relative;
+	width:100%;
+	top:300px;
+}
 .w-designer-deta dl{ margin-top:-60px; padding:0 2%;}
 .w-designer-deta dl dt img{ border-radius:50%; border:solid 5px #FFF;}
 .w-designer-deta dl dd{ max-width:820px; margin:0 auto; text-align:left; color:#7f7f7f;}
@@ -47,13 +57,32 @@ a{ color:#333;}
 }
 @media (max-height: 900px){
 	.w-shooping-list-sort ul li p{ margin:0; line-height:22px;}
+    /*.w-shooping-list-sort ul li {margin-top: 10px; }*/
 }
-@media (max-height: 800px){
-	.w-shooping-list-sort ul li p{ margin:0; line-height:18px;}
+@media (max-height: 600px){
+	.w-shooping-list{ margin-top:59px;}
+	.w-shooping-list-sort{ position:relative; width:100%; height:auto; margin-left:0; top:0; z-index:101;}
+	.w-shooping-list-sort ul.row{ float:none; width:100%; height:0; overflow:hidden;}
+	.w-shooping-list-sort ul li{ float:left; width:20%; text-align:center; padding:0; font-size:12px; padding-bottom:20px;}
+	.sort-btn{ float:none; display:block; width:100%; background:#FFF; text-align:left; padding-top:10px; border-bottom:solid 1px #757575;}
+	.sort-btn.active{ /*border-top:solid 1px #757575;*/}
+	.sort-btn i{ float:right; margin-right:10px; transform:rotate(90deg); -webkit-transform:rotate(90deg); -moz-transform:rotate(90deg);  -ms-transform:rotate(90deg);  -o-transform:rotate(90deg);}
+	.sort-btn p{ display:inline-block; padding-left:10px;}
+	.sort-btn.active p{ display:inline-block;}
+	.sort-btn.active i{ transform:rotate(-90deg); -webkit-transform:rotate(-90deg); -moz-transform:rotate(-90deg);  -ms-transform:rotate(-90deg);  -o-transform:rotate(-90deg);}
+	.w-designer-deta dl{ padding:0 2%; margin-top:-20px;}
+	.w-designer-deta dl dt img{ width:80px; height:80px;}
+	.submenu{ display:none;}
+	.w-shooping-list-box{ padding-top:30px;}
+	.w-shooping-list-box .w-footer .col-lg-4{ width:100%; margin:0; padding-top:15px;}
+	.w-shooping-list-box .w-footer .container{ width:100%;}
+    .visible-md-block {display: none !important;}
+    .visible-sm-block {display: block !important;}
 }
+
 @media (max-width: 992px){
 	.w-shooping-list{ margin-top:59px;}
-	.w-shooping-list-sort{ position:relative; width:100%; height:auto; margin-left:0; top:0; z-index:1031;}
+	.w-shooping-list-sort{ position:relative; width:100%; height:auto; margin-left:0; top:0; z-index:101;}
 	.w-shooping-list-sort ul.row{ float:none; width:100%; height:0; overflow:hidden;}
 	.w-shooping-list-sort ul li{ float:left; width:20%; text-align:center; padding:0; font-size:12px; padding-bottom:20px;}
 	.sort-btn{ float:none; display:block; width:100%; background:#FFF; text-align:left; padding-top:10px; border-bottom:solid 1px #757575;}
@@ -70,12 +99,21 @@ a{ color:#333;}
 	.w-shooping-list-box .w-footer .container{ width:100%;}
 }
 
-@media (max-width: 768px){
+@media (max-width: 900px){
 	.w-shooping-list{ margin-top:50px;}
-	.w-shooping-list-box ul li{ width:48%; margin-bottom:15px;}
+	.w-shooping-list-box ul li{ width:82%; margin-bottom:15px;}
+	.w-shooping-list-box .w-page{ padding:0 0 20px 0;}
+    .w-nav {height: 50px;}
+}
+@media (max-width: 899px){
+	.w-shooping-list{ margin-top:50px;}
+	.w-shooping-list-box ul li{ width:45%; margin-bottom:15px;}
 	.w-shooping-list-box .w-page{ padding:0 0 20px 0;}
 }
-
+@media (max-width: 630px) {
+   .w-shooping-list-box ul li{ width:82%; margin-bottom:15px;}
+}
 @media (max-width: 320px){
 	.w-shooping-list-box ul li{ width:98%;}	
 }
+/*END 2015-10-28 ÐûÑïÐÞ¸Ä*/
